[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/Tile/tileMap.tres" type="TileSet" id=1]
[ext_resource path="res://script/crimson.gd" type="Script" id=2]
[ext_resource path="res://image/goliath_placeholder.png" type="Texture" id=3]
[ext_resource path="res://script/player.gd" type="Script" id=4]
[ext_resource path="res://image/cat.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.0806, 89.9643 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 626.596, 131.154 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 91.0137, 113.125 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.5428, 38.894 )

[node name="Crimson" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 131066, 1, 0, 65557, 1, 0, 196602, 1, 0, 131093, 1, 0, 262138, 1, 0, 196629, 1, 0, 327674, 1, 0, 262165, 1, 0, 393210, 1, 0, 327682, 1, 0, 327689, 1, 0, 327696, 1, 0, 327701, 1, 0, 458746, 1, 0, 393237, 1, 0, 524282, 1, 0, 458773, 1, 0, 589818, 1, 0, 524309, 1, 0, 655354, 1, 0, 589845, 1, 0, 720890, 1, 0, 720891, 1, 0, 720892, 1, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0 )

[node name="Boss" type="KinematicBody2D" parent="."]
position = Vector2( -85.7835, 524.299 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Boss"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="Boss"]
position = Vector2( -17.0163, -14.2313 )

[node name="stalking" type="Area2D" parent="Boss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/stalking"]
position = Vector2( 0, -30 )
shape = SubResource( 3 )

[node name="Claw" type="Area2D" parent="Boss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Claw"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Boss"]
wait_time = 0.8
autostart = true

[node name="FireballTimer" type="Timer" parent="Boss"]
wait_time = 0.8
autostart = true

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 696.316, 409.997 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 4.49719, 2.07379 )
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( 4.28687, 6.00162 )
texture = ExtResource( 5 )
vframes = 3
hframes = 3

[node name="SlowWalkTimer" type="Timer" parent="player"]
wait_time = 15.0
[connection signal="body_entered" from="Boss/stalking" to="Boss" method="_on_stalking_body_entered"]
[connection signal="body_exited" from="Boss/stalking" to="Boss" method="_on_stalking_body_exited"]
[connection signal="body_entered" from="Boss/Claw" to="Boss" method="_on_Claw_body_entered"]
[connection signal="body_exited" from="Boss/Claw" to="Boss" method="_on_Claw_body_exited"]
[connection signal="timeout" from="Boss/Timer" to="Boss" method="_on_Timer_timeout"]
[connection signal="timeout" from="Boss/FireballTimer" to="Boss" method="_on_FireballTimer_timeout"]
